# vxdraw

./: .gitignore  Cargo.toml  README.md  build.rs
benches/: ggez_and_vxdraw.rs
shaders/: debtri.frag  debtri.vert  dyntex.frag  dyntex.vert  proc1.frag  proc1.vert  quads.vert  strtex.frag  strtex.vert
src/: blender.rs  data.rs  debtri.rs  dyntex.rs  lib.rs  quads.rs  strtex.rs  text.rs  utils.rs
