[package]
name = "vxdraw"
version = "0.1.0"
authors = ["Kevin Robert Stravers <macocio@gmail.com>"]
edition = "2018"
build = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arrayvec = "0.4"
cgmath = "0.17"
fast-logger = "0.1.1"
gfx-backend-dx12 = { version = "0.2", optional = true }
gfx-backend-gl = { version = "0.2", optional = true }
gfx-backend-metal = { version = "0.2", optional = true }
gfx-backend-vulkan = { version = "0.2", optional = true }
gfx-hal = "0.2"
glutin = { version = "0.20", optional = true }
glyph_brush = "0.5"
image = "0.21"
rand = "0.6.1"
rand_pcg = "0.1.2"
winit = "0.19"

[build-dependencies]
shaderc = "0.5"

[dev-dependencies]
itertools = "0.8"

[features]
default = ["vulkan"]
dev = []
dx12 = ["gfx-backend-dx12"]
exact = []
no-test-preview = []
gl = ["gfx-backend-gl", "glutin"]
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]

[profile.bench]
debug = true
lto = true
opt-level = 3
overflow-checks = false
