[package]
name = "vxdraw"
version = "0.8.0"
authors = ["Kevin Robert Stravers <macocio@gmail.com>", "Erlend Langseth <3rlendhl@gmail.com>"]
edition = "2018"
description = "Simple 2D rendering library"
homepage = "https://github.com/Omen-of-Aecio/vxdraw"
repository = "https://github.com/Omen-of-Aecio/vxdraw"
keywords = ["rendering", "graphics", "2d"]
license = "LGPL-3.0-or-later"
readme = "README.md"
build = "build.rs"
exclude = ["tests/vxdraw/*"]

[dependencies]
arrayvec = "0.4.11"
cgmath = "0.17.0"
gfx-backend-dx12 = { version = "0.4", optional = true }
gfx-backend-gl = { version = "0.4", optional = true }
gfx-backend-metal = { version = "0.4", optional = true }
gfx-backend-vulkan = { features = ["x11"], version = "0.4", optional = true }
gfx-hal = "0.4.0"
glutin = { version = "0.20", optional = true }
glyph_brush = "0.5.3"
image = "0.22.0"
rand = "0.6.1"
rand_pcg = "0.1.2"
winit = "0.20.0-alpha4"
smallvec = "0.6"
slog = "2.5.2"

[build-dependencies]
shaderc = { version = "0.6", features = ["build-from-source"] }

[dev-dependencies]
criterion = "0.3.0"
ggez = "0.5.1"
itertools = "0.8"

[features]
default = ["vulkan", "doctest-headless"]
dev = []
dx12 = ["gfx-backend-dx12"]
exact = []
no-test-preview = []
gl = ["gfx-backend-gl", "glutin"]
metal = ["gfx-backend-metal"]
vulkan = ["gfx-backend-vulkan"]
doctest-headless = []

[profile.bench]
debug = true
lto = true
opt-level = 3
overflow-checks = false

[[bench]]
name = "ggez_and_vxdraw"
harness = false
